# CMakeList.txt : CMake project for TestMultithread, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("TestMultithread")

# Add source to this project's executable.
add_executable (TestMultithread "TestMultithread.cpp" "TestMultithread.h")

# TODO: Add tests and install targets if needed.
